--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Theme URI: http://seedthemes.com/blogberry/
 Author: SeedThemes
 Author URI: http://seedthemes.com/
 Description: Minimal theme for blogger.
-Version: 0.94
+Version: 1.9.8
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, custom-background, custom-menu, featured-images, sticky-post, theme-options
@@ -409,7 +409,7 @@ h1.title {
 }
 
 #content .fb-comments{
-	padding: 20px 45px 2px;
+	padding: 10px 0 2px;
 	clear: both;
 	display: block;
 }
@@ -695,13 +695,16 @@ li.comment.bypostauthor{
 }
 #brand .name{
 	float: left;
-	padding: 3px 0 0 6px;
+	padding: 14px 0 0 16px;
 }
 #brand .desc {
 	margin: 0 0 10px;
 }
 #search {
-	float: right;
+
+}
+#s{
+	width: 142px;
 }
 #nav {
 	float: right;
@@ -711,7 +714,12 @@ li.comment.bypostauthor{
 #nav .menu-toggle {
 	display: block;
 	padding: 4px 8px;
-	margin: 10px 0;
+	margin: 20px 0 15px;
+	width: 100%;
+	line-height: 20px;
+	text-transform: uppercase;
+	font-size: 14px;
+	letter-spacing: 1px;
 }
 #nav #mainnav{
 	height: 0;
