--- a/style.css
+++ b/style.css
@@ -616,7 +616,10 @@ h1.title {
 	color: #888;
 	background-color: #eee;
 	border-radius: 3px;
-	margin: 0 5px 5px 0;
+	margin: 0 8px 8px 0;
+	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.18);
+	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.18);
+	line-height: 28px;
 }
 
 
